--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -541,5 +541,28 @@
     </div>
   </div>
 </div>
+<!--Showroom-->
+<div class="container showroom">
+  <div class="row">
+    <div class="col-4">
+      <h4 class="mb-3">Our Showroom</h4>
+      <p class="smt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
+      <p class="smt">10 Northumberland St, London WC2N 5DB, UK</p>
+      <p class="smt">Email info @AGURI&PIJ2022.com for appointment</p>
+    </div>
+    <div class="col-2">
+      <div class="smt text-right">
+        We’re happy to help with in-store or virtual appointments
+      </div>
+    </div>
+    <div class="col-6">
+      <img src="./assets/img/home/showroom1.png"/>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
