--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -141,8 +141,8 @@
     </div>
     <div class="row all-bottom">
       <div class="col-4 bottom-content">
-        <div class="bottom-content-inner">
-          <p class="smt mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
+        <div class="bottom-content-inner text-right">
+          <p class="decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
         </div>
       </div>
       <div class="col-4">
@@ -519,24 +519,27 @@
     </div>
   </div>
 <!--Users Experiences-->
-<div class="experiences">
+<div class="experiences mbt-120">
   <div class="container">
-    <h4 class="text-center mbt">The Aguri Experience</h4>
+    <h4 class="text-center mb-5">The Aguri Experience</h4>
     <div class="row">
       <div class="col-4 text-center ps-0">
-        <i class="fa-regular fa-truck fa-3x"></i>
+        <i class="fa-regular fa-truck fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+        <span>Learn more <i class="fa-regular fa-arrow-right"></i></span>
       </div>
       <div class="col-4 text-center">
-        <i class="fa-regular fa-calendar fa-3x"></i>
+        <i class="fa-regular fa-calendar fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+        <span>Book now <i class="fa-regular fa-arrow-right"></i></span>
       </div>
       <div class="col-4 text-center pe-0">
-        <i class="fa-regular fa-gift fa-3x"></i>
+        <i class="fa-regular fa-gift fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+        <span>Explore now <i class="fa-regular fa-arrow-right"></i></span>
       </div>
     </div>
   </div>
@@ -550,8 +553,8 @@
       <p class="smt">10 Northumberland St, London WC2N 5DB, UK</p>
       <p class="smt">Email info @AGURI&PIJ2022.com for appointment</p>
     </div>
-    <div class="col-2">
-      <div class="smt text-right">
+    <div class="col-2 bottom-content">
+      <div class="decor-text text-right bottom-content-inner">
         We’re happy to help with in-store or virtual appointments
       </div>
     </div>
