--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -473,7 +473,7 @@
               <option value="3">5 1/2</option>
             </select>
           </div>
-          <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
           <a href="">
             <p>View more detail</p>
           </a>
@@ -545,12 +545,12 @@
   </div>
 </div>
 <!--Showroom-->
-<div class="container showroom">
+<div class="container showroom mbt-120">
   <div class="row">
     <div class="col-4">
       <h4 class="mb-3">Our Showroom</h4>
-      <p class="smt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
-      <p class="smt">10 Northumberland St, London WC2N 5DB, UK</p>
+      <p class="mdt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
+      <p class="mdt">10 Northumberland St, London WC2N 5DB, UK</p>
       <p class="smt">Email info @AGURI&PIJ2022.com for appointment</p>
     </div>
     <div class="col-2 bottom-content">
@@ -563,6 +563,8 @@
     </div>
   </div>
 </div>
+<!--GET INSPIRATION-->
+
 
 
 
