--- a/src/app/pages/shop-all/shop-all.component.css
+++ b/src/app/pages/shop-all/shop-all.component.css
@@ -41,7 +41,7 @@
   margin-bottom:60px;
 }
 .click-to-all{
-  background-color: #e7e7e7;
+  background-color: #000;
   padding-top:103px;
   padding-bottom:103px;
 }
