--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -5,51 +5,72 @@
       <div class="cate-name text-center">
         <div class="cate-name-all">
           <ul>
-            <li><a>
+            <li><a routerLink="#">
               <h5>Rings</h5>
             </a></li>
-            <li><a href="#">
+            <li><a routerLink="#">
               <h5>Earrings</h5>
             </a></li>
-            <li><a href="#">
+            <li><a routerLink="#">
               <h5>Bracelets</h5>
             </a></li>
-            <li><a href="#">
+            <li><a routerLink="#">
               <h5>Necklaces</h5>
             </a></li>
           </ul>
         </div>
       </div>
-      <div class="cate-neck mtp">
-        <div class="categories-card">
-          <a href="#">
+      <div class="item-box-all cate-neck mtp">
+        <div class="item-box-img">
+          <a routerLink="#">
             <img src="./assets/img/shop-all/cate1.png">
           </a>
-          <div class="cate-card-name">
-            <a href="#">
-              <h5>Necklaces</h5>
-            </a>
-          </div>
+        </div>
+        <div class="item-box-content text-center">
+          <a routerLink="#">
+            <h5>Necklaces</h5>
+          </a>
         </div>
       </div>
     </div>
     <div class="col-4 cate-center">
-      <div class="cate-ring mbt">
-        <a href="#">
-          <img src="./assets/img/shop-all/cate2.png">
-        </a>
+      <div class="item-box-all cate-ring mbt">
+        <div class="item-box-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/cate2.png">
+          </a>
+        </div>
+        <div class="item-box-content text-center">
+          <a routerLink="#">
+            <h5>Rings</h5>
+          </a>
+        </div>
       </div>
-      <div class="cate-earr">
-        <a href="#">
-          <img src="./assets/img/shop-all/cate3.png">
-        </a>
+      <div class="cate-earr item-box-all mbt">
+        <div class="item-box-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/cate3.png">
+          </a>
+        </div>
+        <div class="item-box-content text-center">
+          <a routerLink="#">
+            <h5>Earrings</h5>
+          </a>
+        </div>
       </div>
     </div>
     <div class="col-4 cate-right">
-      <div class="cate-bra mbt">
-        <a href="#">
-          <img src="./assets/img/shop-all/cate4.png">
-        </a>
+      <div class="cate-bra mbt item-box-all">
+        <div class="item-box-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/cate4.png">
+          </a>
+        </div>
+        <div class="item-box-content text-center">
+          <a routerLink="#">
+            <h5>Bracelets</h5>
+          </a>
+        </div>
       </div>
       <h3 class="text-center">Aguri's JewelleRy</h3>
     </div>
