--- a/src/styles.css
+++ b/src/styles.css
@@ -357,3 +357,39 @@ nav li:nth-child(1){
 .signin-inner{
   margin:auto;
 }
+/*All Jewelery from home page*/
+.item-box-all{
+  position:relative;
+  overflow: hidden;
+}
+.item-box-content{
+  position:absolute;
+  top:50%;
+  transform: translateY(-50%);
+  width:100%;
+  display:none;
+}
+.item-box-all:hover > .item-box-content{
+  display:block;
+  transition: 0.4s all;
+}
+.item-box-all:hover > .item-box-img{
+  transform:scale(108%);
+  filter:brightness(70%);
+  transition:0.4s all;
+}
+.item-box-content a{
+  color:#fff;
+}
+.item-box-content a:hover{
+  color:#fff;
+  text-decoration: underline;
+}
+.bottom-content{
+  position:relative;
+}
+.bottom-content-inner{
+  position:absolute;
+  bottom:0px;
+  left:0px;
+}
