--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,50 +1,98 @@
 <link rel="stylesheet" href="home.component.css">
-<div class="container">
-  <!--New Arrivals-->
-  <div class="simi-prod mbt-120">
+<!--New Arrivals-->
+<div id="carouselExampleFade" class="simi-prod mbt-120 carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner container">
     <div class="row">
-      <div class="col-3">
-        <h5>New Arrivals</h5>
+      <div class="col-3 ps-0">
+        <h5 class="mb-2 mt-5">New Arrivals</h5>
         <p class="smt">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new1.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
+      <div class="col-9 pe-0">
+        <div class="carousel-item active">
+          <div class="row">
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new1.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new2.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new3.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new2.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new3.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new4.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new5.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/home/new6.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Compare
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+<div class="container">
   <!-- Modal Compare-->
   <div class="modal fade" id="compare">
     <div class="modal-dialog modal-dialog-centered">
@@ -429,7 +477,7 @@
       <div class="row">
         <div class="col-7 ps-0">
           <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -527,19 +575,19 @@
         <i class="fa-regular fa-truck fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <span>Learn more <i class="fa-regular fa-arrow-right"></i></span>
+        <a>Learn more <i class="fa-regular fa-arrow-right"></i></a>
       </div>
       <div class="col-4 text-center">
         <i class="fa-regular fa-calendar fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <span>Book now <i class="fa-regular fa-arrow-right"></i></span>
+        <a>Book now <i class="fa-regular fa-arrow-right"></i></a>
       </div>
       <div class="col-4 text-center pe-0">
         <i class="fa-regular fa-gift fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <span>Explore now <i class="fa-regular fa-arrow-right"></i></span>
+        <a>Explore now <i class="fa-regular fa-arrow-right"></i></a>
       </div>
     </div>
   </div>
@@ -559,7 +607,20 @@
       </div>
     </div>
     <div class="col-6">
-      <img src="./assets/img/home/showroom1.png"/>
+      <!--carousel showroom-->
+      <div id="carouselshowroom" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img src="./assets/img/home/showroom1.png"/>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./assets/img/home/showroom2.png"/>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/home/showroom3.png"/>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
