--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -157,18 +157,16 @@
   <div class="modal-dialog modal-dialog-centered first-steps">
     <div class="modal-content first-steps-inner">
       <h5 class="modal-title mb-4 text-center">Welcome to AGURI!</h5>
-      <div class="">
-        <label>Email address</label>
-        <input class="inpu" type="email" required><br>
-      </div>
-      <div class="my-3">
-        <label>Create password</label>
-        <input class="inpu" type="text" required>
-      </div>
-      <button type="button" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign in</button>
+      <form>
+          <label for="emailuser">Email address</label>
+          <input id="emailuser" class="inpu mb-3" type="email" required><br>
+          <label>Create password</label>
+          <input class="inpu" type="text" required>
+      </form>
+      <button type="submit" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign in</button>
       <div class="d-flex sign-in-content">
         <div class="signin-inner">
-          <a class="forgot-pass smt me-5" data-bs-toggle="modal" type="button" data-bs-target="#forgotpass">Forgot password?</a>
+          <a class="forgot-pass smt me-5" data-bs-toggle="modal" type="submit" data-bs-target="#forgotpass">Forgot password?</a>
           <span class="smt">New member?<a class="sign-up smt" data-bs-toggle="modal" type="button" data-bs-target="#signup">Sign up</a></span>
         </div>
       </div>
@@ -181,13 +179,14 @@
   <div class="modal-dialog modal-dialog-centered first-steps">
     <div class="modal-content first-steps-inner">
       <h5 class="modal-title mb-4 text-center">Forgot your password?</h5>
-      <div class="">
+      <!--name="myFormBottom" onsubmit="return validateFormBottom()"-->
+      <form>
         <label>Email address</label>
         <input class="inpu" type="email" required><br>
-      </div>
-      <button type="button" class="btn btn-pri my-4" data-bs-dismiss="modal">Reset Password</button>
+      </form>
+      <button type="submit" class="btn btn-pri my-4" data-bs-dismiss="modal">Reset Password</button>
       <div class="text-center">
-          <a class="smt" data-bs-toggle="modal" type="button" data-bs-target="#signin">Back to Sign in</a>
+          <a class="smt" data-bs-toggle="modal" type="submit" data-bs-target="#signin">Back to Sign in</a>
       </div>
     </div>
   </div>
@@ -198,34 +197,36 @@
   <div class="modal-dialog modal-dialog-centered first-steps">
     <div class="modal-content first-steps-inner">
       <h5 class="modal-title mb-4 text-center">Hello, Friend!</h5>
-      <div class="row">
-        <div class="col-6 ps-0">
-          <label>First name</label>
-          <input class="inpu" type="text" required><br>
+      <form>
+        <div class="row">
+          <div class="col-6 ps-0">
+            <label>First name</label>
+            <input class="inpu" type="text" required><br>
+          </div>
+          <div class="col-6 pe-0">
+            <label>Last name</label>
+            <input class="inpu" type="text" required><br>
+          </div>
         </div>
-        <div class="col-6 pe-0">
-          <label>Last name</label>
-          <input class="inpu" type="text" required><br>
+        <div class="my-3">
+          <label>Email address</label>
+          <input class="inpu" type="email" required><br>
         </div>
-      </div>
-      <div class="my-3">
-        <label>Email address</label>
-        <input class="inpu" type="email" required><br>
-      </div>
-      <div class="">
-        <label>Create password</label>
-        <input class="inpu" type="text" required>
-      </div>
-      <div class="my-3">
-        <label>Re-type password</label>
-        <input class="inpu" type="text" required>
-      </div>
-      <button type="button" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign up</button>
-      <div class="d-flex sign-in-content">
-        <div class="signin-inner">
-          <span class="smt">Already have an account? <a class="sign-in smt" data-bs-toggle="modal" type="button" data-bs-target="#signin">Sign in</a></span>
+        <div class="">
+          <label>Create password</label>
+          <input class="inpu" type="text" required>
         </div>
-      </div>
+        <div class="my-3">
+          <label>Re-type password</label>
+          <input class="inpu" type="text" required>
+        </div>
+        <button type="submit" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign up</button>
+        <div class="d-flex sign-in-content w-100">
+          <div class="signin-inner">
+            <span class="smt">Already have an account? <a class="sign-in smt" data-bs-toggle="modal" type="button" data-bs-target="#signin">Sign in</a></span>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
