--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -111,7 +111,7 @@
 
 <!--api-test-start-->
       <div class="row cate-product">
-        <div class="col-3 card" *ngFor="let item of data">
+        <div class="col-3 card mb-9" *ngFor="let item of data">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -177,8 +177,8 @@
                 </div>
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-3">{{item.name}}</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">{{item.name}}</p>
               <p class="smt item-price">${{item.price}}</p>
             </div>
           </div>
@@ -187,7 +187,7 @@
 <!--api-test-end-->
 
       <div class="row cate-product">
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -253,13 +253,13 @@
                 </div>
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -271,13 +271,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -289,13 +289,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -307,15 +307,15 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
       </div>
       <div class="row cate-product">
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -327,13 +327,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -345,13 +345,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -363,13 +363,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3 card">
+        <div class="col-3 card mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -381,8 +381,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
@@ -391,7 +391,7 @@
 
       <!--featured-product-->
       <div class="mb-3 row">
-        <div class="col-6">
+        <div class="col-6 mb-9">
           <div class="featured">
             <div class="featured-img">
               <a routerLink="#">
@@ -403,7 +403,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -415,13 +415,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt mb-0">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -433,8 +433,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt mb-0">$7,000</p>
             </div>
           </div>
@@ -442,7 +442,7 @@
       </div>
 
       <div class="row cate-product ">
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -454,13 +454,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -472,13 +472,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -490,13 +490,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -508,15 +508,15 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
       </div>
       <div class="row cate-product">
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -528,13 +528,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -546,13 +546,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -564,13 +564,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -582,15 +582,15 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="decor-text mb-1">Lynn Ring</p>
               <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -602,13 +602,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="mdt mb-1">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -620,13 +620,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="mdt mb-1">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -638,13 +638,13 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="mdt mb-1">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mb-9">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -656,8 +656,8 @@
                 Quick view
               </div>
             </div>
-            <div class="item-inf text-center mt-3">
-              <p class="mdt mb-2">Lynn Ring</p>
+            <div class="item-inf text-center mt-2">
+              <p class="mdt mb-1">Lynn Ring</p>
               <p class="smt">$7,000</p>
             </div>
           </div>
