--- a/src/app/pages/guide/guide.component.css
+++ b/src/app/pages/guide/guide.component.css
@@ -13,9 +13,9 @@
   top:50%;
   transform: translateY(-50%);
 }
-.natural-d{
-  padding-right:25px;
-}
+/*natural-jewelery*/
+
+
 /*jewellery-care*/
 .jewellery-care li {
   list-style-type: disc;
