--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -18,9 +18,37 @@
 <div class="container mbt-120">
   <!--Jewelery-type-->
   <div class="jewellery-type">
-    <!--lab-grown-jewellery-->
+    <!--lab-jewellery-->
     <div class="row mbt-120">
-      <div class="col-6 content">
+      <div class="col-2">
+        <h4 class="text-right">About</h4>
+        <h4 class="text-right">Lab - Grown Jewellery</h4>
+      </div>
+      <div class="col-5">
+        <div>
+          <img src="./assets/img/guide/2.png"/>
+        </div>
+      </div>
+      <div class="col-5 content">
+        <div class="content-inner">
+          <p class="mdt my-3">How Lab-Grown Jewellery Are Formed</p>
+          <p class="mb-2 smt">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
+            necessary for a diamond crystal to form, replicating the earth's natural process of diamond formation.</p>
+          <p class="smt">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
+            Chemical Vapor Deposition (CVD).An HPHT diamond starts as a small diamond seed that is placed into carbon.
+            Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
+            the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
+            carbon diamond.In the CVD method, a diamond seed is placed in carbon rich gasses that are ionized into plasma
+            using technology similar to that of microwaves and lasers.</p>
+        </div>
+      </div>
+    </div>
+    <!--natural-jewellery-->
+    <div class="row mbt-120">
+      <div class="col-7 natural-j-img">
+        <img src="./assets/img/guide/3.png"/>
+      </div>
+      <div class="col-5 content">
         <div class="content-inner natural-d">
           <h4>Natural Jewellery</h4>
           <p class="mdt my-3">How Earth-Created Jewelry Are Formed</p>
@@ -34,29 +62,7 @@
             aren’t part of a diamond’s essential chemistry. Some of them influence color.</p>
         </div>
       </div>
-      <div class="col-6">
-        <img src="./assets/img/guide/3.png" />
-      </div>
-    </div>
-    <!--natural-jewellery-->
-    <div class="row mbt-120">
-      <div class="col-5">
-        <img src="./assets/img/guide/2.png" />
-      </div>
-      <div class="col-7 content">
-        <div class="content-inner lab-d">
-          <h4>Lab - grown Jewellery </h4>
-          <p class="mdt my-3">How Earth-Created Jewelry Are Formed</p>
-          <p class="mb-2 smt">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
-            necessary for a diamond crystal to form, replicating the earth's natural process of diamond formation.</p>
-          <p class="smt">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
-            Chemical Vapor Deposition (CVD).An HPHT diamond starts as a small diamond seed that is placed into carbon.
-            Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
-            the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
-            carbon diamond.In the CVD method, a diamond seed is placed in carbon rich gasses that are ionized into plasma
-            using technology similar to that of microwaves and lasers.</p>
-        </div>
-      </div>
+      <div class="col"></div>
     </div>
   </div>
   <!--diamond-and-4cs-->
