--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -572,22 +572,28 @@
     <h4 class="text-center mb-5">The Aguri Experience</h4>
     <div class="row">
       <div class="col-4 text-center ps-0">
-        <i class="fa-regular fa-truck fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a>Learn more <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-truck fa-2x"></i>
+          <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a routerLink="#" class="decor-text">Learn more <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
       <div class="col-4 text-center">
-        <i class="fa-regular fa-calendar fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a>Book now <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-calendar fa-2x"></i>
+          <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a routerLink="#" class="decor-text">Book now <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
       <div class="col-4 text-center pe-0">
-        <i class="fa-regular fa-gift fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a>Explore now <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-gift fa-2x"></i>
+          <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a routerLink="#" class="decor-text">Explore now <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
     </div>
   </div>
